# The-Construct-CheckPoint-6-Autonomous-Navigation

./: README.md
cartographer_slam/: CMakeLists.txt
catkin_ws/src/load_params/launch/: load_params.launch  load_params_arm.launch  load_params_base.launch
catkin_ws/src/load_params/params/: topics.yaml  topics_arm.yaml  topics_base.yaml
localization_server/: CMakeLists.txt
localization_server/config/: amcl_config.yaml  warehouse_map_sim.pgm
localization_server/launch/: localization.launch.py
localization_server/rviz/: rviz2.rviz
map_server/launch/: map_server.launch.py
map_server/rviz/: rviz2.rviz
nav2_apps/: CMakeLists.txt
nav2_apps/launch/: move_shelf_to_ship.launch.py
nav2_apps/scripts/: move_shelf_to_ship.py
nav2_apps/src/: approach_service_server.cpp
path_planner_server/: CMakeLists.txt  package.xml
path_planner_server/config/: controller.yaml  filters.yaml  map_keepout_real.pgm  map_keepout_real.yaml  map_keepout_sim.pgm
ros2_ws/src/cartographer_slam/: package.xml
ros2_ws/src/cartographer_slam/config/: warehouse_map_real.yaml
ros2_ws/src/cartographer_slam/launch/: cartographer.launch.py
ros2_ws/src/cartographer_slam/rviz/: rviz2.rviz
ros2_ws/src/localization_server/: package.xml
ros2_ws/src/map_server/: CMakeLists.txt  package.xml
ros2_ws/src/map_server/config/: warehouse_map_real.pgm
ros2_ws/src/nav2_apps/: package.xml
ros2_ws/src/path_planner_server/config/: amcl_config.yaml  map_keepout_sim.yaml  planner_server.yaml  warehouse_map_sim.yaml
ros2_ws/src/path_planner_server/launch/: pathplanner.launch.py
ros2_ws/src/path_planner_server/rviz/: rviz2.rviz
simulation_ws/src/warehouse_robot_lab/rb1_base_common/rb1_base_control/config/: rb1_base_control.yaml
simulation_ws/src/warehouse_robot_lab/rb1_base_common/rb1_base_description/robots/: rb1_base.urdf  rb1_base.urdf.xacro  rb1_base_elevator.urdf.xacro  rb1_dual_ur3.urdf.xacro
simulation_ws/src/warehouse_robot_lab/rb1_base_common/rb1_base_description/urdf/: common.gazebo.xacro
simulation_ws/src/warehouse_robot_lab/rb1_base_sim/rb1_base_gazebo/: package.xml
simulation_ws/src/warehouse_robot_lab/rb1_base_sim/rb1_base_gazebo/launch/: gazebo_rviz.launch  gazebo_ur.launch  my_rb1_robot_warehouse.launch  rb1_base_gazebo.launch  rb1_base_one_robot.launch  rb1_warehouse.launch  warehouse.launch  warehouse_rb1.launch  warehouse_ur3e.launch
simulation_ws/src/warehouse_robot_lab/rb1_base_sim/rb1_base_gazebo/worlds/: empty_world.world  ros2_online_workshop.world
simulation_ws/src/warehouse_robot_lab/rg2_gripper_common/rg2_gripper_description/config/: gripper_control.yaml
simulation_ws/src/warehouse_robot_lab/rg2_gripper_common/rg2_gripper_description/urdf/: rg2_gripper.urdf.xacro
simulation_ws/src/warehouse_robot_lab/robotnik_base_hw_sim/config/: elevator_fake_pickup_gazebo.yaml
simulation_ws/src/warehouse_robot_lab/robotnik_base_hw_sim/src/robotnik_base_hw_sim/: elevator_fake_action_server.py  elevator_fake_pickup_gazebo.py  elevator_fake_pickup_gazebo.py.bak  ros2_fake_elevator.py
simulation_ws/src/warehouse_robot_lab/robotnik_msgs/: CMakeLists.txt
simulation_ws/src/warehouse_robot_lab/robotnik_msgs/action/: SetElevatorFake.action
simulation_ws/src/warehouse_robot_lab/robotnik_sensors/urdf/: hokuyo_ust20lx.urdf.xacro  intel_r430.urdf.xacro  ydlidar_4f.urdf.xacro
(+36 files in other folders)
